# 406-SysOps-Cloud-Security

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  gitleaks.yml  markdownlint.yml  pm-evidence.yml  portfolio-ci.yml  rust.yml
CC/Winter 2025/SysOps and Cloud Security - Aditya Palshikar - CSC-7308/: COURSE_REFLECTION.md  EVIDENCE_INDEX.md  FINAL_ASSESSMENT_PREPARATION.md  FINAL_EXAM_VULNERABILITY_ASSESSMENT.md  MIDTERM_PROJECT_SUMMARY.md  README.md  SCRIPTS_README.md
CC/Winter 2025/SysOps and Cloud Security - Aditya Palshikar - CSC-7308/assignments/: README.md  Wk01_Lab_03_Firewall_Logs.md  Wk02_Lab_02_ACC.md  (+6 more)
CC/Winter 2025/SysOps and Cloud Security - Aditya Palshikar - CSC-7308/scripts/ping_sweep/: Cargo.toml  README.md  code-explanation.md  ping-sweep-flow.mermaid
CC/Winter 2025/SysOps and Cloud Security - Aditya Palshikar - CSC-7308/scripts/ping_sweep/src/: main.rs
docs/: COMPREHENSIVE_AUDIT_2026-04-06.md  EMPLOYER_AUDIT_2026-04-05.md  PORTFOLIO_AUDIT.md  README.md  SESSION_2026-04-05_AUDIT_REMEDIATION.md  SESSION_2026-04-06_COMPREHENSIVE_REMEDIATION.md  VALIDATION_REPORT.md  course-context.md  privacy-and-sanitization.md  references.md  sessions.md  skills-matrix.md
portfolio/: config.json
scripts/: distribute_skills.sh  gen_radar.py  pm.sh
scripts/portfolio/: run.sh
scripts/roadmap/: parse_roadmap.py  sync_issues.py
scripts/sessions/: index_sessions.py  sanitize_session.py
unified-skills/: README.md
unified-skills/pm-tools/: SKILL.md
(+13 files in other folders)
