[package]
name = "ping_sweep"
version = "0.2.0"
edition = "2021"
authors = ["Ross Moravec"]
description = "Async ICMP ping sweep CLI tool — scans subnets for live hosts using Tokio"
license = "MIT"
repository = "https://github.com/rossmoravec/406-SysOps-Cloud-Security"
readme = "README.md"
keywords = ["ping", "network", "security", "async", "tokio"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
pinger = "1"
tokio = { version = "1", features = ["full"] }
